revised code for getting all the songs in the website

--- a/segments.ipynb
+++ b/segments.ipynb
@@ -2,193 +2,127 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydub import AudioSegment\n",
-    "\n"
+    "from pydub.silence import split_on_silence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absolute path: /Users/ejgalang/Desktop/ej_file/SoundFile/13-Track-13.mp3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "# Specify the relative or full path to your file\n",
-    "relative_path = \"13-Track-12.mp3\"  # Adjust as needed\n",
-    "\n",
-    "# Get the absolute path\n",
-    "absolute_path = os.path.abspath(relative_path)\n",
-    "\n",
-    "print(\"Absolute path:\", absolute_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ffmpeg_path = \"/opt/homebrew/bin/ffmpeg\"  # Update the path if necessary\n",
-    "\n",
-    "# Set the path to the FFmpeg executable\n",
-    "AudioSegment.converter = ffmpeg_path\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now you can load the audio file\n",
-    "audio = AudioSegment.from_file(\"/Users/ejgalang/Downloads/13-Track-13-2.mp3\", format=\"mp3\")\n",
-    "\n"
+    "audio = AudioSegment.from_file(\"Psalter/71. The Fearlessness of Faith.mp3\", format=\"mp3\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Audio processing complete.\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "eq_filter = audio + 1 # Adjust the gain value as needed\n",
-    "\n",
-    "# Export the processed audio\n",
-    "eq_filter.export(\"output_audio.mp3\", format=\"mp3\")\n",
-    "\n",
-    "print(\"Audio processing complete.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pydub.playback import play"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Audio processing complete. Processed audio saved to output_audio.mp3.\n"
-     ]
-    }
-   ],
-   "source": [
-    "cutoff_frequency = 3200  # Adjust the cutoff frequency as needed\n",
-    "high_pass_filter = audio.low_pass_filter(cutoff_frequency)\n",
-    "\n",
-    "# Export the processed audio to the output file\n",
-    "high_pass_filter.export(\"output_audio1.mp3\", format=\"mp3\")\n",
-    "\n",
-    "print(f\"Audio processing complete. Processed audio saved to output_audio.mp3.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from pydub.silence import split_on_silence\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "# `min_silence_len` sets the minimum duration of silence to consider (in milliseconds)\n",
     "# `silence_thresh` sets the volume threshold below which audio is considered silence\n",
-    "segments = split_on_silence(audio, min_silence_len=1000, silence_thresh=-39)  # Adjust as needed\n",
+    "# Set parameters\n",
+    "silence_thresh = -39  # Adjust this threshold as needed\n",
+    "min_silence_duration = 1000  # Minimum silence duration in milliseconds\n",
+    "min_segment_length = 500  # Minimum segment length in milliseconds\n",
     "\n",
-    "# Export each segment\n",
-    "for i, segment in enumerate(segments):\n",
-    "    output_file = f\"output_segment_{i}.mp3\"\n",
-    "    segment.export(output_file, format=\"mp3\")\n",
-    "\n",
-    "print(f\"Audio splitting complete. {len(segments)} segments created.\")\n"
+    "# Split audio into segments based on silence\n",
+    "segments = split_on_silence(\n",
+    "    audio,\n",
+    "    silence_thresh=silence_thresh,\n",
+    "    min_silence_len=min_silence_duration,\n",
+    "    keep_silence=min_segment_length\n",
+    "    \n",
+    ")  # Adjust as needed\n",
+    "print(len(segments))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First, second, and last segments combined and saved.\n"
+      "Audio splitting complete. 6 segments created.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export each segment\n",
+    "for i, segment in enumerate(segments):\n",
+    "    output_file = f\"soundclip/output_segment_{i}.mp3\"\n",
+    "    segment = segment.fade_out(500)\n",
+    "    segment.export(output_file, format=\"mp3\")\n",
+    "\n",
+    "print(f\"Audio splitting complete. {len(segments)} segments created.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audio splitting complete. 90593 segments created.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export combined segments\n",
+    "if segments:\n",
+    "    output_file = f\"soundclip/combined_segments.mp3\"\n",
+    "    segments[0] = segments[0].fade_out(200)\n",
+    "    segments[1] = segments[1].fade_out(200)\n",
+    "    segments[-1] = segments[-1].fade_out(200)\n",
+    "    combined_segment = segments[0] + AudioSegment.silent(duration=700) + segments[1] + AudioSegment.silent(duration=700) + segments[1] + AudioSegment.silent(duration=1000) + segments[-1]\n",
+    "\n",
+    "    combined_segment.export(output_file, format=\"mp3\")\n",
+    "\n",
+    "\n",
+    "print(f\"Audio splitting complete. {len(combined_segment)} segments created.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The duration of the first segment is 38.238 seconds.\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "# Define the silence threshold and duration (adjust as needed)\n",
-    "silence_thresh = -40  # Adjust as needed\n",
-    "min_silence_len = 1000  # Adjust as needed\n",
+    "# Calculate the duration of the first segment in seconds\n",
+    "duration_seconds = len(segments[1]) / 1000  # Convert milliseconds to seconds\n",
     "\n",
-    "# Split the audio on silence\n",
-    "segments = split_on_silence(audio, min_silence_len=min_silence_len, silence_thresh=silence_thresh)\n",
-    "\n",
-    "\n",
-    "# Check if there are segments\n",
-    "if segments:\n",
-    "    # Combine the first, second, and last segments\n",
-    "    combined_segment = segments[0] + AudioSegment.silent(duration=1000) + segments[1] + AudioSegment.silent(duration=1000) + segments[-1]\n",
-    "\n",
-    "    # Create a filename that includes the silence threshold\n",
-    "    output_filename = f\"combined_segments_silence_{silence_thresh}dB.mp3\"\n",
-    "\n",
-    "    # Export the combined segment with metadata\n",
-    "    combined_segment.export(output_filename, format=\"mp3\", tags={'silence_threshold': f'{silence_thresh}dB'})\n",
-    "\n",
-    "    print(\"First, second, and last segments combined and saved.\")\n",
-    "else:\n",
-    "    print(\"No segments found in the audio.\")"
+    "print(f\"The duration of the first segment is {duration_seconds} seconds.\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
